// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField Snapshots should applies disabled classes 1`] = `
<div>
  <div
    class="text-field text-field--disabled text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      disabled=""
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should applies fullWidth classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'critical' skin classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--critical"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'ghost' appearance classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--ghost text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'lg' size classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--lg text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'md' size classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'neutral' skin classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'neutral-faded' skin classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'outline' appearance classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'sm' size classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--sm text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'soft' appearance classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--soft text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'success' skin classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--success"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should apply 'xl' size classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--xl text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should render additional classes 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded other-class"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should render left slot content 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <span
      class="text-field__left"
    >
      Left slot
    </span>
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;

exports[`TextField Snapshots should render right slot content 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
    <span
      class="text-field__right"
    >
      Right slot
    </span>
  </div>
</div>
`;

exports[`TextField Snapshots should renders default component 1`] = `
<div>
  <div
    class="text-field text-field--full-width text-field--md text-field--outline text-field--neutral-faded"
  >
    <input
      class="text-field__input"
      value="Input"
    />
  </div>
</div>
`;
